# RapidRAW

./: .gitignore  README.md  package-lock.json  settings.gradle.kts  start.sh
app/: build.gradle.kts
app/src/androidTest/java/com/dueckis/kawaiiraweditor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dueckis/kawaiiraweditor/: AiSubjectMaskGenerator.kt  LibRawDecoder.kt  MainActivity.kt  ProjectStorage.kt
app/src/main/java/com/dueckis/kawaiiraweditor/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/dueckis/kawaiiraweditor/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs  raw_processing.rs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_processing_stub.rs  file_management.rs  image_processing.rs  lib.rs  main.rs  tagging_stub.rs
src-tauri/src/shaders/: shader.wgsl
src/components/panel/: Editor.tsx  SettingsPanel.tsx
src/components/panel/editor/: ImageCanvas.tsx
src/components/panel/right/: RightPanelSwitcher.tsx
src/components/ui/: AppProperties.tsx
src/utils/: adjustments.tsx
