[package]
name = "kawaiiraweditor"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "kawaiiraweditor"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
jni = { version = "0.21", features = ["invocation"] }
log = "0.4"
rawler = { path = "third_party/rawler" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
