[package]
name = "RapidRAW"
description = "A blazingly-fast, non-destructive, and GPU-accelerated RAW image editor built with performance in mind."
authors = ["Timon Käch"]
version = "1.4.6"
edition = "2024"
rust-version = "1.90"
resolver = "2"

[lib]
name = "rapidraw"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "RapidRAW"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.9", features = [ "macos-private-api", "rustls-tls" ] }
tauri-plugin-dialog = "2.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.8"
base64 = "0.22"
tauri-plugin-fs = "2.4.4"
rayon = "1.11.0"
blake3 = "1.8.2"
wgpu = "27.0"
pollster = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
window-vibrancy = "0.6.0"
anyhow = "1.0.100"
kamadak-exif = "0.6.1"
rawler = { path = "rawler/rawler" }
serde_bytes = "0.11.19"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5.0"
imageproc = "0.25.0"
ndarray = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
tauri-plugin-process = "2"
tauri-plugin-os = "2.3.2"
raw-window-handle = "0.6.2"
os_info = "3"
log = "0.4"
fern = "0.7"
little_exif = "0.6.20"
chrono = "0.4"
once_cell = "1.21"
futures = "0.3.31"
sha2 = "0.10"
nalgebra = "0.34.1"
rand = "0.9"
tauri-plugin-shell = "2.3.3"
tempfile = "3.23.0"
num_cpus = "1.17.0"
mimalloc = "0.1.48"
image_hasher = "3.0.0"
regex = "1.11.3"
memmap2 = "0.9.8"
half = { version = "2.7.1", features = ["bytemuck"] }
exr = "1.73.0"
qoi = "0.4.1"
glam = "0.30.9"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "load-dynamic"] }
tokenizers = "0.22.1"
window-vibrancy = "0.6.0"
tauri-plugin-single-instance = "2.3.6"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking"] }
hex = "0.4"

[profile.dev]
opt-level = 3
debug = true
incremental = true

[profile.release]
codegen-units = 1
lto = true
strip = true
